    + 3.0 compatibility module docutils._compat

    + drop 2.2 compatibility workarounds

  - Apply [ 1719345 ] Galician translation
  - Apply [ 1905741 ] polish-translation
  - Apply [ 1878977 ] make_id(): deaccent characters.

* reStructuredText:

  - Allow length units for all length specifications.
  - Allow percent sign in "scale" argument of "figure" and "image" directives.

* docutils/nodes.py:

  - Added ``Element.__contains__`` method, for the in-operator.

* docutils/parsers/rst/states.py:

  - Apply [ 1994493 ] Patch to support all kinds of quotes in inline markup.
  - Added support for Unicode inline markup delimiters "‐ ‑ ‒ – —" and
    " " (non-breaking space), and "¡ ¿" openers.

* docutils/utils.py:

  - Added ``get_stylesheet_list`` function.

* docutils/writers/html4css1/__init__.py:

  - ``--stylesheet`` and ``--stylesheet-path`` options support a comma
    separated list of stylesheets.

* docutils/writers/newlatex2e/__init__.py:

  - Apply [ 1612821 ] Double quotes in literal text in Italian/German

* docutils/writers/latex2e/__init__.py (see also
  `<docs/user/docutils-05-compat.sty.html>`__) :

  - Add option ``--use-titlepage-env``.
  - Add option ``--embed-stylesheet``.
  - Apply [ 1474017 ] image vertical alignment is reversed.
  - Apply [ 2051599 ] multi-page tables in latex writer (from pabigot).
  - Fix: for spanish ``~n`` is ``n`` with tilde above, change to ``~{}n``.
  - Change: has_key for dictionaries (not Nodes) to in-operator.
  - Merge adjacent citations into one latex cite command.
  - Failsave implementation of custom roles. LaTeX compilation now ignores
    unknown classes instead of aborting with an error.
  - Support custom roles based on standard roles.
  - LaTeX packages can be used as ``--stylesheet`` arguments without
    restriction. (A style sheet is now referenced with the ``\usepackage``
    command, if it ends with ``.sty`` or has no extension.)
  - Add ``bp`` to lenghts without unit (prevents LaTex errors).