@@ -94,25 +94,39 @@ Length units
 ------------
 
 New Features:
-  #. add default unit if none given (to prevent LaTeX error)
-     a poll on docutils-users favoured ``bp`` (Big Point: 1 bp  = 1/72 in)
+  1. Add default unit if none given.
+     A poll on docutils-users favoured ``bp`` (Big Point: 1 bp  = 1/72 in).
 
-  #. Do not change ``px`` to ``pt``.
+  2. Do not change ``px`` to ``pt``.
+
+  3. Lengths specified in the document with unit "pt" will be written with
+     unit "bp" to the LaTeX source.
 
 Rationale:
-  * ``px`` is a valid unit in pdftex since version 1.3.0 released on
-    2005-02-04:
+  1. prevent LaTeX error "missing unit".
 
-      1px defaults to 1bp (or 72dpi), but can be changed with the
-      ``\pdfpxdimen`` primitive.::
+  2. ``px`` is a valid unit in pdftex since version 1.3.0 released on
+     2005-02-04:
+
+       1px defaults to 1bp (or 72dpi), but can be changed with the
+       ``\pdfpxdimen`` primitive.::
 
           \pdfpxdimen=1in % 1 dpi
           \divide\pdfpxdimen by 96 % 96 dpi
 
        --  http://www.tug.org/applications/pdftex/NEWS
 
-  * Modern TeX distributions use pdftex also for dvi generation
-    (i.e. ``latex`` actually calls ``pdftex`` with some options).
+     Modern TeX distributions use pdftex also for dvi generation (i.e.
+     ``latex`` actually calls ``pdftex`` with some options).
+
+  3. In Docutils (as well as CSS) the unit symbol "pt" denotes the
+     `Postscript point` or `DTP point` while LaTeX uses "pt" for the `LaTeX
+     point`, which is unknown to Docutils and 0.3 % smaller.
+
+     The `DTP point` is available in LaTeX as "bp" (big point):
+
+       1 pt = 1/72.25 in < 1 bp  = 1/72 in
+
 
 Backwards compatibility:
   Images with width specification in ``px`` come out slightly (0.3 %) larger:
@@ -123,8 +137,8 @@ Backwards compatibility:
 
     \pdfpxdimen=1pt
 
-.. caution:: It is impossible to revert the change of lengths specified
-   without unit in a style sheet, however the 0.3 % change will be
+.. caution:: It is impossible to revert the change of lengths specified with
+   "pt" or without unit in a style sheet, however the 0.3 % change will be
    imperceptible in most cases.
 
 .. admonition:: Error ``illegal unit px``
